--- a/pages/chat.html
+++ b/pages/chat.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chat — surewhynot.app</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <style>
     .chatLog{ height: 380px; overflow:auto; }
     .msg{ padding:8px 10px; border:1px solid rgba(255,255,255,0.10); background:rgba(0,0,0,0.25); border-radius:12px; margin:8px 0; }
