--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
       <nav class="navcenter" aria-label="Site">
         <a class="pill active" href="#home" id="tab-home">Home</a>
-        <a class="pill" href="/typeracer.html" id="tab-typeracer">Type Racer</a>
+        <a class="pill" href="/typeracer.html"
         <a class="pill" href="#puzzle" id="tab-puzzle">Mini Puzzle</a>
         <a class="pill" href="#utility" id="tab-utility">Utility</a>
       </nav>
