header info added-include js fiel

--- a/utility.html
+++ b/utility.html
@@ -53,22 +53,7 @@
 
 <body>
   <div class="page">
-    <header>
-      <div class="wrap topbar">
-        <div class="brand">
-          <span class="dot"></span>
-          <span>SureWhyNot — Social Studio</span>
-        </div>
-        <div class="subtitle">tiny, privacy-forward, ad-friendly</div>
-
-        <nav class="navcenter" aria-label="Site">
-          <a class="pill" href="/index.html">Home</a>
-          <a class="pill" href="/typeracer.html">Type Racer</a>
-          <a class="pill" href="/puzzle.html">Mini Puzzle</a>
-          <a class="pill active" href="/utility.html">Utility</a>
-        </nav>
-      </div>
-    </header>
+    <div id="site-header"></div>
 
     <main>
       <div class="wrap">
