--- a/index.html
+++ b/index.html
@@ -17,22 +17,7 @@
 <body>
   <div class="page">
 
-    <header>
-      <div class="wrap topbar">
-        <div class="brand">
-          <span class="dot"></span>
-          <span>SureWhyNot — Social Studio</span>
-        </div>
-        <div class="subtitle">tiny, privacy-forward, ad-friendly</div>
-
-        <nav class="navcenter" aria-label="Site">
-          <a class="pill active" href="/index.html">Home</a>
-          <a class="pill" href="/typeracer.html">Type Racer</a>
-          <a class="pill" href="/puzzle.html">Mini Puzzle</a>
-          <a class="pill" href="/utility.html">Utility</a>
-        </nav>
-      </div>
-    </header>
+    <div id="site-header"></div>
 
     <main>
       <div class="wrap">
@@ -75,18 +60,7 @@
       </div>
     </main>
 
-    <footer>
-      <div class="footerwrap">
-        <div>© 2026 surewhynot.app</div>
-        <div class="footerlinks">
-          <a href="/about.html">About</a>
-          <span>•</span>
-          <a href="/privacy.html">Privacy</a>
-          <span>•</span>
-          <a href="/contact.html">Contact</a>
-        </div>
-      </div>
-    </footer>
+    <div id="site-footer"></div>
 
   </div>
 </body>
