Revert "header info added-include js fiel"
This reverts commit 5b2a8716dec41004500e39bd991b1a14b1836b96.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
 <body>
   <div class="page">
 
-    <div id="site-header"></div>
+    <header>
+      <div class="wrap topbar">
+        <div class="brand">
+          <span class="dot"></span>
+          <span>SureWhyNot — Social Studio</span>
+        </div>
+        <div class="subtitle">tiny, privacy-forward, ad-friendly</div>
+
+        <nav class="navcenter" aria-label="Site">
+          <a class="pill active" href="/index.html">Home</a>
+          <a class="pill" href="/typeracer.html">Type Racer</a>
+          <a class="pill" href="/puzzle.html">Mini Puzzle</a>
+          <a class="pill" href="/utility.html">Utility</a>
+        </nav>
+      </div>
+    </header>
 
     <main>
       <div class="wrap">
@@ -60,7 +75,18 @@
       </div>
     </main>
 
-    <div id="site-footer"></div>
+    <footer>
+      <div class="footerwrap">
+        <div>© 2026 surewhynot.app</div>
+        <div class="footerlinks">
+          <a href="/about.html">About</a>
+          <span>•</span>
+          <a href="/privacy.html">Privacy</a>
+          <span>•</span>
+          <a href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </footer>
 
   </div>
 </body>
