--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
           <a class="pill" href="/typeracer.html">Type Racer</a>
           <a class="pill" href="/puzzle.html">Mini Puzzle</a>
           <a class="pill" href="/utility.html">Utility</a>
+		  <a class="pill" href="/json2ts.html">JSON→TS</a>
         </nav>
       </div>
     </header>
