--- a/utility.html
+++ b/utility.html
@@ -66,6 +66,7 @@
           <a class="pill" href="/typeracer.html">Type Racer</a>
           <a class="pill" href="/puzzle.html">Mini Puzzle</a>
           <a class="pill active" href="/utility.html">Utility</a>
+		  <a class="pill" href="/json2ts.html">JSON→TS</a>
         </nav>
       </div>
     </header>
