--- a/typeracer.html
+++ b/typeracer.html
@@ -168,8 +168,8 @@
           <a class="pill" href="/index.html">Home</a>
           <a class="pill active" href="/typeracer.html">Type Racer</a>
           <a class="pill" href="/puzzle.html">Mini Puzzle</a>
-          <a class="pill" href="/utility.html">Utility</a>
-		  <a class="pill" href="/json-to-typescript.htmljson2ts.html">JSON→TS</a>
+          <a class="pill" href="/json-to-typescript.html">JSON→TS</a>
+
         </nav>
       </div>
     </header>
