--- a/puzzle.html
+++ b/puzzle.html
@@ -50,8 +50,7 @@
           <a class="pill" href="/index.html">Home</a>
           <a class="pill" href="/typeracer.html">Type Racer</a>
           <a class="pill active" href="/puzzle.html">Mini Puzzle</a>
-          <a class="pill" href="/utility.html">Utility</a>
-		  <a class="pill" href="/json-to-typescript.html</a>
+          <a class="pill" href="/json-to-typescript.html">JSON→TS</a>
         </nav>
       </div>
     </header>
