--- a/typeracer.html
+++ b/typeracer.html
@@ -120,103 +120,129 @@
 }
 
 /* ---------- Airplane ---------- */
+/* ---------- Airplane (Top View) ---------- */
 .veh.plane{
-  width:40px; height:14px;
-  border-radius:10px;
-  background:
-    linear-gradient(to bottom, rgba(255,255,255,.22), rgba(0,0,0,.28)),
-    linear-gradient(135deg, #6cc7ff, #2457c6);
-}
-.veh.plane::before{
-  /* wings */
-  content:"";
-  position:absolute;
-  left:6px; top:3px;
-  width:34px; height:8px;
-  border-radius:12px;
-  background:
-    linear-gradient(to bottom, rgba(255,255,255,.18), rgba(0,0,0,.18)),
-    linear-gradient(135deg, #8ad7ff, #2f6de0);
-  border:1px solid rgba(0,0,0,.28);
-  transform: skewX(-16deg);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.12);
-}
-.veh.plane::after{
-  /* tail + nose */
-  content:"";
-  position:absolute;
-  right:-6px; top:4px;
-  width:10px; height:6px;
-  border-radius:0 6px 6px 0;
-  background: linear-gradient(to bottom, rgba(255,255,255,.18), rgba(0,0,0,.25));
-  border:1px solid rgba(0,0,0,.25);
+  width:44px; height:44px;
+  border-radius:50%;
+  background: transparent;
+  border:none;
+  box-shadow: none;
 }
 
+/* fuselage */
+.veh.plane::before{
+  content:"";
+  position:absolute;
+  left:20px; top:4px;
+  width:4px; height:36px;
+  border-radius:4px;
+  background:
+    linear-gradient(to right, rgba(255,255,255,.35), rgba(0,0,0,.25)),
+    linear-gradient(135deg, #6cc7ff, #2457c6);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.25);
+}
+
+/* wings + tail */
+.veh.plane::after{
+  content:"";
+  position:absolute;
+  left:4px; top:18px;
+  width:36px; height:8px;
+  border-radius:10px;
+  background:
+    linear-gradient(to bottom, rgba(255,255,255,.28), rgba(0,0,0,.28)),
+    linear-gradient(135deg, #8ad7ff, #2f6de0);
+  box-shadow:
+    0 -12px 0 -4px rgba(140,220,255,.8),   /* top tail wing */
+    0 12px 0 -4px rgba(140,220,255,.8);    /* bottom tail wing */
+}
+
+
 /* ---------- Formula 1 Car ---------- */
+/* ---------- Formula 1 Car (better silhouette) ---------- */
 .veh.f1{
-  width:46px; height:12px;
-  border-radius:7px;
+  width:54px; height:16px;
+  border-radius:10px;
+  border:1px solid rgba(0,0,0,.35);
   background:
     linear-gradient(to bottom, rgba(255,255,255,.18), rgba(0,0,0,.28)),
     linear-gradient(135deg, #ff4b4b, #8b1010);
-}
-.veh.f1::before{
-  /* cockpit + front wing */
-  content:"";
-  position:absolute;
-  left:16px; top:-6px;
-  width:16px; height:8px;
-  border-radius:7px;
-  background:
-    linear-gradient(to bottom, rgba(255,255,255,.20), rgba(0,0,0,.24)),
-    linear-gradient(135deg, #ff7a7a, #b31212);
-  border:1px solid rgba(0,0,0,.28);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.12);
-}
-.veh.f1::after{
-  /* wheels (4) */
-  content:"";
-  position:absolute;
-  left:4px; top:6px;
-  width:40px; height:12px;
-  background:
-    radial-gradient(circle at 6px 6px, #111 0 3px, #8a8a8a 4px 5px, transparent 6px),
-    radial-gradient(circle at 16px 6px, #111 0 3px, #8a8a8a 4px 5px, transparent 6px),
-    radial-gradient(circle at 30px 6px, #111 0 3px, #8a8a8a 4px 5px, transparent 6px),
-    radial-gradient(circle at 40px 6px, #111 0 3px, #8a8a8a 4px 5px, transparent 6px);
-  pointer-events:none;
+  box-shadow:
+    0 10px 18px rgba(0,0,0,.45),
+    inset 0 1px 0 rgba(255,255,255,.12);
+  overflow: visible; /* ensure wheels never clip */
 }
 
-/* ---------- Boat ---------- */
-.veh.boat{
-  width:44px; height:14px;
-  border-radius:0 0 12px 12px;
-  background:
-    linear-gradient(to bottom, rgba(255,255,255,.16), rgba(0,0,0,.30)),
-    linear-gradient(135deg, #ffd166, #b65d00);
-}
-.veh.boat::before{
-  /* sail */
+/* cockpit + nose */
+.veh.f1::before{
   content:"";
   position:absolute;
-  left:18px; top:-14px;
+  left:18px; top:-6px;
+  width:18px; height:10px;
+  border-radius:10px;
+  background:
+    linear-gradient(to bottom, rgba(255,255,255,.22), rgba(0,0,0,.24)),
+    linear-gradient(135deg, #ff7a7a, #b31212);
+  border:1px solid rgba(0,0,0,.28);
+  box-shadow:
+    inset 0 1px 0 rgba(255,255,255,.14),
+    -14px 10px 0 -6px rgba(0,0,0,.0); /* spacer so nose reads longer */
+}
+
+/* wheels + wings */
+.veh.f1::after{
+  content:"";
+  position:absolute;
+  left:-6px; top:6px;               /* left negative so front wheel isn't cut off */
+  width:66px; height:18px;
+  pointer-events:none;
+
+  background:
+    /* front wing */
+    linear-gradient(to right, rgba(0,0,0,.0) 0 6px, rgba(255,255,255,.18) 6px 16px, rgba(0,0,0,.0) 16px 100%),
+    /* rear wing */
+    linear-gradient(to right, rgba(0,0,0,.0) 0 46px, rgba(255,255,255,.18) 46px 60px, rgba(0,0,0,.0) 60px 100%),
+
+    /* wheels (4) */
+    radial-gradient(circle at 10px 12px, #111 0 5px, #8a8a8a 6px 7px, transparent 8px),
+    radial-gradient(circle at 24px 12px, #111 0 5px, #8a8a8a 6px 7px, transparent 8px),
+    radial-gradient(circle at 48px 12px, #111 0 5px, #8a8a8a 6px 7px, transparent 8px),
+    radial-gradient(circle at 62px 12px, #111 0 5px, #8a8a8a 6px 7px, transparent 8px);
+}
+
+
+/* ---------- Boat ---------- */
+/* ---------- Boat (Clean, no dock lines) ---------- */
+.veh.boat{
+  width:44px; height:16px;
+  border-radius:0 0 14px 14px;
+  background:
+    linear-gradient(to bottom, rgba(255,255,255,.18), rgba(0,0,0,.32)),
+    linear-gradient(135deg, #ffd166, #b65d00);
+  box-shadow:
+    0 10px 18px rgba(0,0,0,.45),
+    inset 0 1px 0 rgba(255,255,255,.15);
+}
+
+/* Sail */
+.veh.boat::before{
+  content:"";
+  position:absolute;
+  left:18px; top:-16px;
   width:0; height:0;
-  border-left:10px solid transparent;
+  border-left:12px solid transparent;
   border-right:0 solid transparent;
-  border-bottom:16px solid rgba(230,245,255,.85);
+  border-bottom:18px solid rgba(235,245,255,.95);
   filter: drop-shadow(0 4px 8px rgba(0,0,0,.35));
 }
+
+/* Mast only (no water shadows) */
 .veh.boat::after{
-  /* mast + water highlight */
   content:"";
   position:absolute;
-  left:16px; top:-2px;
-  width:2px; height:16px;
-  background: rgba(0,0,0,.45);
-  box-shadow:
-    0 16px 0 0 rgba(80,180,255,.25),
-    10px 16px 0 0 rgba(80,180,255,.16),
-    20px 16px 0 0 rgba(80,180,255,.12);
+  left:20px; top:-2px;
+  width:2px; height:18px;
+  background: linear-gradient(to bottom, #444, #111);
 }
 
 
